fix: Changed colors for better contrast ratio

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #ffda94;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -41,7 +41,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #dbdbdb;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -88,7 +88,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #024f92;
     text-decoration: none;
 }
 
@@ -109,7 +109,7 @@ nav h1 a {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background-color: #3397DB;
+  background-color: #1d5b91;
   align-items: center;
 }
 .filter-options h2 {
@@ -161,7 +161,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #613f00;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -175,7 +175,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #613f00;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -213,7 +213,7 @@ nav h1 a {
   width: 50%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #7a4100;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -251,7 +251,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #7a4300;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
